# bro_interpreter

./: CMakeLists.txt  bro  invalid_script_tokens.txt  test.txt  valid_script_tokens.txt
lexer/: lexer.cpp  lexer.h  transition_matrix.cpp
src/: main.cpp
src/ast/: ast.cpp  ast.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h  transition_matrix.cpp  transition_matrix.h
src/parser/: grammar.cpp  grammar.h  parser.cpp  parser.h
src/semantic/: semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.cpp  symbol_table.h
test_files/: invalid_script.txt  semantic_errors.bro  semantic_valid.bro  test_ast.txt  valid_script.txt
